<resources>
    <string name="app_name">WaterResourceApp</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>

    <string name="profile">My Profile</string>
    <string name="orders">My Orders</string>
    <string name="home">Home</string>

    <string name="login_username">Login</string>
    <string name="login_password">Password</string>
    <string name="login_name">Please Enter your Name</string>
    <string name="login_mobile_hint">Enter your mobile number</string>
    <string name="login_password_hint">Enter password</string>
    <string name="login_submit">Submit</string>

    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="not_existed">User doesn\'t exists. Invalid login or password. Please Register first.</string>



    <string name="register"><html><u>Register Here</u></html></string>
    <string name="forgot_password">Forgot password </string>

    <string name="forgotTitle">Forgot password</string>
    <string name="update_password">Update password</string>
    <!-- <string name="forgot_password">Forgot password Click Here..</string>-->
    <string name="logout">Are you sure want to Logout ?</string>
    <string name="signout">Logout</string>
    <string name="order_confirm_msg">Are you sure want to Submit the Order ?</string>

    <string name="signUp_username">User Name</string>
    <string name="signUp_mobileNumber">Mobile Number</string>
    <string name="signUp_email">Email</string>
    <string name="signUp_username_hint">Please Enter your Name</string>
    <string name="signUp_mobileNumber_hint">Please Enter your Mobile Number</string>
    <string name="signUp_email_hint">Please Enter your Email Id</string>
    <string name="signUp_submit">Register</string>

    <dimen name="dp_5">5dp</dimen>
    <dimen name="dp_10">10dp</dimen>
    <dimen name="dp_15">15dp</dimen>
    <dimen name="dp_20">20dp</dimen>
    <dimen name="dp_25">25dp</dimen>
    <dimen name="dp_30">30dp</dimen>
    <dimen name="dp_32">32dp</dimen>
    <dimen name="dp_35">35dp</dimen>
    <dimen name="dp_40">40dp</dimen>
    <dimen name="dp_45">45dp</dimen>
    <dimen name="dp_50">50dp</dimen>

    <dimen name="sp_10">10sp</dimen>
    <dimen name="sp_15">15sp</dimen>
    <dimen name="sp_18">18sp</dimen>
    <dimen name="sp_20">20sp</dimen>
    <dimen name="sp_25">25sp</dimen>
    <dimen name="sp_30">30sp</dimen>
    <dimen name="sp_35">35sp</dimen>
    <string name="title_activity_home">Map</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="enter_source_hint">Enter Source</string>
    <string name="enter_destination_hint">Enter destination</string>


    <!-- Validations -->

    <string name="valid_phone">Please enter valid Mobile number</string>
    <string name="valid_password">Please enter valid Password</string>
    <string name="valid_usertype">Please select user type</string>

    <string name="valid_destination">Please select Destination</string>
    <string name="valid_quantity">Please enter valid Quantity</string>
    <string name="valid_order">Please select valid order</string>

    <string name="next">Next</string>

    <string name="submit_order">Submit Order</string>
    <string name="numberofbottles">Enter Can Count</string>
    <string name="type">Select Type</string>
    <string name="gps_settings_body">GPS is not enabled. Please goto settings and enable gps.</string>
    <string name="gps_settings_title">GPS settings</string>
    <string name="please_complete">Please complete the survey</string>]
    <string name="back_again">Press back again to exit</string>


    <!--oders -->
    <string name="order_headline">Order Details</string>
    <string name="waterCanCount">WaterCans:</string>
    <string name="address">Address:            </string>
    <string name="water_type">Order Type: </string>
    <string name="payment">Payment Options</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <!--<string name="payment">Payment Options</string>
    <string name="payment">Payment Options</string>-->

    <string name="location">LOCATION PERMISSION IS MANDATORY</string>
    <string name="CALL">CALL</string>


    <string-array name="quantity">
        <item> 1</item>
        <item>2 </item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="type">
        <item>Daily</item>
        <item>Weekly Thrice </item>
        <item>Weekly Twice</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>15 days</item>

    </string-array>
    <string name="title_activity_aaaa">AAAAA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="enable_permissions">This app requires all permissions. \nPlease go to device settings and enable required permissions.</string>

    <string-array name="category">
        <item>Select User Type</item>
        <item>Customer</item>
        <item>Dealer</item>
    </string-array>

</resources>
