<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <resource.water.com.waterresourceapp.util.CustomTextViewBold
        android:text="Registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/titleName"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_30"
        android:textSize="@dimen/sp_30"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:text="@string/signUp_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp_40"
        android:textColor="@android:color/white"
        android:id="@+id/signUpRegister" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp_20"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
       >

   <!-- <TextView
        android:text="@string/signUp_mobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center"
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@android:color/black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />-->

        <!--<EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:imeOptions="actionNext"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:ems="10"
            android:textSize="@dimen/dp_15"
            android:hint="@string/login_name"
            android:id="@+id/name" />
-->
    <resource.water.com.waterresourceapp.util.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="10"
        android:imeOptions="actionNext"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:ems="10"
        android:textSize="@dimen/dp_15"
        android:hint="@string/signUp_mobileNumber_hint"
        android:id="@+id/mobileNumber" />

   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_20"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/login_password"
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/textView2" />-->

    <resource.water.com.waterresourceapp.util.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLength="15"
        android:imeOptions="actionDone"

        android:gravity="center"
        android:hint="@string/login_password_hint"
        android:layout_marginTop="@dimen/dp_20"
        android:textColorHint="@android:color/black"
        android:textSize="@dimen/dp_15"
        android:ems="10"
        android:id="@+id/signUpPassword" />

        </LinearLayout>

</RelativeLayout>