<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">


    <LinearLayout
        android:id="@+id/itemDetailsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:padding="@dimen/dp_10"
        android:layout_margin="@dimen/dp_10"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:weightSum="2">

            <resource.water.com.waterresourceapp.util.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:id="@+id/water"
                android:text="@string/waterCanCount"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <resource.water.com.waterresourceapp.util.CustomTextView
                android:id="@+id/waterCanQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/water"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.8"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:weightSum="2">

            <resource.water.com.waterresourceapp.util.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:id="@+id/type"
                android:text="@string/water_type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <resource.water.com.waterresourceapp.util.CustomTextView
                android:id="@+id/orderType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/type"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.8"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:weightSum="2">

            <resource.water.com.waterresourceapp.util.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/address"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <resource.water.com.waterresourceapp.util.CustomTextView
                android:id="@+id/addressInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/address"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_weight="1.5"
                android:text="Medium Textsafasdsdfdssdsdfsdfsdsdsdfsdsssddsfdsdsfsdfdsdsaszsczxczxc"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>